--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ tokio = { version = "1.21.2", features = ["full"] }
 serde = "1.0.145"
 serde_derive = "1.0.145"
 serde_json = "1.0.85"
+langchain-rust = "0.1.1"
+
